CSS/style.css
body { 
    font-family: 'Readex Pro', sans-serif;
    margin: 0;
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    border-bottom: 2px solid black;
    padding-bottom: 3px;
    margin: 8px 8px 0;
}

.logo {
    height: 100px;
}

.headertext {
    display: none;
}

@media (min-width: 768px) {
    .headertext {
        display: flex;
        flex-direction: column;
    }
}

.socialscontainer {
    display: flex; 
    flex-direction: row;
    
}

.socials {
    display: flex;
    height: 30px;
    width: 30px;
    padding: 10px;
}

.menubuttoncontainer {
    display: block;
}

.menubutton {
    background: none;
    border: none;
    padding: 0;
}

@media (min-width: 768px) {
    .menubuttoncontainer {
        display: none;
    }
}

.content {
    display:flex;
    flex-direction: row;
    height: 100%;
}

.sidebar {
    width: 0;
    height: auto;
    flex-direction: column;
    justify-content: space-between;
    max-height: 100vh;
    transition: width 0.5s;
    height: calc(100vh - 117px);
    overflow-y: auto;
    position: fixed;
}

.sidebar.open {
    z-index: 100;
    background: white;
    width: 200px;
    border-right: 2px solid;
}

@media (min-width: 768px) {
  .sidebar {
      position: inherit;
      width: 250px;
      display: flex;
      transition: 0.3s;
      border-right: 0;
  }
}

.sidebarentry {
    width: 150px;
    animation: rotation 8s infinite linear;
    animation-play-state: paused;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}

.sidebarentry-active {
    width: 175px;
}

.sidebarentry:hover {
    animation: rotation 8s infinite linear;
}

/* Landing Page */

.slider {
    width: 40px;
    border-right: 2px solid black;
    border-left: 2px solid black;
    background-color: #659978;
}

.article {
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: #A1C1AD;
    padding: 20px 40px;
    overflow-y: auto;
    height: calc(100vh - 157px);
}

.title {
    font-size: 40px;
}

.articlecontent {
    display: flex;
    flex-direction: row;
}

.leftcontentinfo {
    display: flex;
    flex-direction: column;
    width: 50%;
    justify-content: flex-start;
}

.entrytitle {
    margin-bottom: 0;
}

.divider {
    width: 200px;
    height: 5px;
    background-color: #EC89AC;
    border-radius: 3px;
}


.leftentryinfo {
    white-space: pre-line;
    color: whitesmoke;
    font-size: 16px;
    

}
 
.rightcontentphoto {
    display: flex;
    flex-direction: column;
    width: 50%;
    justify-content: flex-end;
    
}

/* Angela Article */

.articleangela {
    width: 100%;
    background-color: #A1C1AD;
    padding: 5px 40px;
    height: calc(100vh - 127px);
    overflow-y: scroll;
    z-index: 0;
}

.angelaimagecontainer {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.angelaimage {
    width: 800px;
}

.angelatitlecontainer {
    display: flex;
    flex-direction: column;
    position: absolute;
    left: 32%;
    top: 52%;
}

.angelatitle {
    color: white;
    margin-bottom: 0;
    font-size: 40px;
}

.angelasubtitle {
    color: white;
    font-size: 12px;
    font-weight: 200;
}

.angelaarticlecontainer {
    display: flex;
    flex-direction: row;
}

.angelaarticleleftcontainer {
    width: 100%;
}


@media (min-width: 768px) {
    .angelaarticleleftcontainer {
        width: 60%;
    }
}

.articletext {
    white-space: pre-line;
    z-index: 100;
    font-family: 'Times New Roman', Times, serif;
    font-size: 1.25rem;
    line-height: 1.875rem;
    font-weight: 100;
    position: relative;
}

.angelaarticleimagecontainer {
    width: 0;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (min-width: 768px) {
    .angelaarticleimagecontainer {
        width: 40%;
    }
}

.angelaarticleimage {
    width: 100%;
    z-index: 99;
    padding: 30px;
}

/* hues */

.sliderhues {
    background-color:#A49BD2;
}

.hues {
    background-color: #B7B0DC;
}

/* about */

.sliderabout {
    background-color: #C4B399;
}

.about {
    background-color: #C4B399;
    position: relative;
    z-index: 0;
}

.missionstatement {
    position: relative;
    width: 80%;
}

.missionstatementbackground {
    position: absolute;
    z-index: 0;
    top: 30px;
    left: 50%;
    height: 70vh;
}

.leftbottomimagecontainer {
    position: absolute;
    right: 0;
    bottom: 0;
}

.leftbottomimage {
    display: block;
    width: 400px;
    height: 400px;
    position: absolute;
    right: 0;
    bottom: 0;
}

.leftbottomimageoverlay {
    width: 400px;
    height: 400px;
    transition: 0.3s;
    opacity: 0;
    position: absolute;
    right: 0;
    bottom: 0;
}

.leftbottomimagecontainer:hover >.leftbottomimage {
    opacity: 0;
}

.leftbottomimagecontainer:hover >.leftbottomimageoverlay {
    opacity: 1;
}

